# iam-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: arn_demo.rs  evaluation_demo.rs  validation_demo.rs
src/: lib.rs
src/core/: action.rs  arn.rs  effect.rs  mod.rs  operator.rs  principal.rs  resource.rs  version.rs
src/evaluation/: context.rs  engine.rs  matcher.rs  mod.rs  operator_eval.rs  request.rs  variable.rs
src/models/: action.rs  arn.rs  arn_matcher.rs  condition.rs  context.rs  effect.rs  evaluation.rs  mod.rs  policy.rs  principal.rs  resource.rs  statement.rs  validation.rs
src/policy/: condition.rs  mod.rs  policy.rs  statement.rs
src/validation/: mod.rs  validator.rs
tests/: arns.json  proc-policies.sh  spec.json
tests/evals/: 4.json
tests/policies/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  (+19 more)
tests/requests/: 1.json  2.json  3.json  4.json  5.json
